# meson-iPlug2

./: .gitignore  dev-log.org  dev.org  meson.build  readme.org
examples/IPlugControls/: dev-log.org  dev.org  meson.build  meson_options.txt  readme.org
examples/IPlugControls/src/: meson.build
examples/IPlugControls/src/resources/: meson.build
examples/IPlugControls/subprojects/: iPlug2.wrap
examples/IPlugImgui/: dev-log.org  dev.org  imgui.ini  meson.build
examples/IPlugImgui/src/: IPlugImgui.cpp  IPlugImgui.h  config.h  meson.build
examples/IPlugImgui/test/: IPlugImgui-linux.RPP
examples/IPlugMinimal/: dev.org  meson.build  meson_options.txt
examples/IPlugMinimal/src/: meson.build
examples/IPlugMinimal/subprojects/: iPlug2.wrap
examples/IPlugMinimal/test/: .gitignore  reaper.txt
examples/IPlugReaperExtension/: meson.build
examples/IPlugReaperExtension/src/: IPlugReaperExtension.cpp
examples/IPlugReaperExtension/subprojects/: iPlug2.wrap
examples/IPlugSDL/: .cproject  .project  dev-log.org  dev.org  meson.build
examples/IPlugSDL/src/: IPlugSDL.cpp  IPlugSDL.h  config.h  meson.build
examples/IPlugSDL/subprojects/: iPlug2.wrap
examples/IPlugSDL/test/: IPlugMinimal.RfxChain  IPlugSDL.RPP
src/: AOD_IPlug01.cpp  AOD_IPlug01.h  IPlugEffect.cpp  IPlugEffect.h  config.h  meson.build
src/resources/: meson.build  resource.h
